app/assets/stylesheets/io_import.css.scss
/* ... */
.lineitems-container {
  margin:20px auto;
  width:96%;
  font-size:13px;
  color:black;
  font-weight:normal;
  font-size:normal;

  .header {
    color: $text_color;

    div {
      font-family: 'Armata', sans-serif;
      font-size:14px;
      vertical-align:bottom;
    }
  }

  .lineitem {
    margin-bottom:10px;
    margin-top:10px;
    background-color: $bg_color;
    padding:0;
    clear:both;

    > div[class^="pure-u"] {
      padding:10px 0;
      &:nth-child(2) {
        border-right: 2px solid white;
        @include box-sizing(border-box);
      }
    }

    .li-number {
      text-align:center;
      color:white;
      font-weight:bold;
      background: $li_number_bg;
    }

    .number-field {
      text-align: right;
      .editable, .number-value {
        margin-right: 10px;
      }
    }

    .li-command-btn, .li-commands-btn {
      margin-left: -25px;
    }

    .li-commands-btn {
      background: sprite($images, li-command-btn) no-repeat;
      width: 16px;
      height: 16px;
      display: block;
      cursor: pointer;
    }

    span.operation {
      color: $text_color;
      cursor: pointer;
    }

    .video-icon {
      margin-top: 4px;
    }

    .pencil-icon {
      float: left;
      margin-top: 3px;
    }

    .size .typeahead {
      background-color: transparent;
    }

    .types-dropdown {
      left: -16px;
      letter-spacing: normal;
      border: solid #fff 1px;
      border-radius: 0;
      margin: 0;
      padding: 0;
      background-color: $bg_color;
      .li-add-ad-btn {
        padding: 3px 10px;
      }
    }

    > div.lineitem-sizes, > div.li-sizes {
      padding-right: 7px;
    }
  }

  .start-date .editable, .end-date .editable {
    margin-left: 10px;
  }

  .ads-container {
    background-color: $ad_bg_color;
    border-top: 2px solid white;
    border-bottom: 5px solid white;
    .ad {
      border-bottom: 2px solid white;
    }

    div[class^="pure-u"] {
      padding-top: 5px;
    }

    .ad-name {
      text-align: center;
      color: $text_color;
      font-weight: bold;
      background-color: $bg_color;
      border-right: 2px solid white;
      @include box-sizing(border-box);

      .dfp-success {
        background: url(asset-path('dfp_icon.png')) 0px 0px no-repeat;
        width: 20px;
        height: 30px;
        float: left;
        margin-top: 3px;
        margin-left: 15px;
      }

      .centered-icon {
        margin: 5px auto;
      }
    }

    .buttons-container {
      background-color: white;
      text-align: center;
      cursor: pointer;

      .clone-btn {
        margin: 0 5px;
      }
      
      .delete-btn {
        margin: 10px 5px 0 5px;
      }
    }
  }

  .targeting_options_condensed {
    clear: both;
    font-size: 11px;
    margin-top:7px;

    span {
      border-bottom: 1px dashed $text_color;
    }
  }
}

.lineitems-summary-container {
  margin:10px;
  font-size:13px;
  color:black;
  font-weight:normal;
  font-size:normal;

  .summary {
    margin-top:20px;

    .totals-label {
      color: $text_color;
    }

    .totals-label, .total-cpm, .total-media-cost, .total-impressions {
      font-weight:bold;
      font-size:14px;
    }

    .li-button {
      float: left;
      padding: 3px 15px;
      border: 1px dashed $text_color;
      color: $text_color;
      cursor: pointer;
    }

    .li-button.disabled {
      cursor: default;
      opacity: 0.5;
    }

    .li-button:not(.add_targeting) {
      margin-left: 15px;
    }
  }
}

.status-btn-container {
  margin-right:10px;
  margin-top:20px;
  padding:10px;
  text-align:right;
  font-family: 'Armata', sans-serif;

  .save-order-btn, .push-order-btn, .submit-trafficker-btn, .submit-am-btn {
    background-color: $text_color;
    color: white;
    width: 50px;
    float: right;
    text-align: center;
    padding: 5px;
    text-decoration:none;
    margin-right:10px;

    &:hover{
      background: lighten($text_color, 10%);
      cursor: pointer;
    }
  }

  .push-order-btn {
    background-color: $magenta_color;

    &:hover{
      background: lighten($magenta_color, 10%);
    }
  }
}

.account-contact-icon {
  margin-left: 3px;
}

.dma-targeting-icon {
  float: left;
}

.custom-kv-icon {
  float: left;
}

.zip-codes-icon {
  float: left;
}
/* ... */

